# collibra

./: AGENTS.md  BACKLOG.md  CLAUDE.md  CODEX.md  Makefile  MeasuresImport_upd.xlsx  README.md  Uni-Notes.docx  claude_export_jq.sh  claude_export_processor.sh  server.js
.github/workflows/: chain_of_command.yml
collibra-integrations/: pom.xml
collibra-integrations/collibra-edge/: pom.xml
collibra-integrations/collibra-jdbc/: pom.xml
collibra-integrations/collibra-storage/: pom.xml
collibra-integrations/collibra-webhooks/: pom.xml
docs/: collibra-io-commands.md
docs/man/: singine-collibra-contract.1  singine-collibra-edge.1  singine-collibra-id.1  singine-collibra-server.1  singine-collibra.1
docs/quantum/: chip-quantum-catalog.tex  quantum-catalog.xml
docs/xml/: chip-queries.xml  singine-agent-contract.xml  singine-collibra-commands.xml  singine-collibra-model.xml
edge/: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.cloud.yml  docker-compose.dev.yml  docker-compose.yml  mms-channels.json
id-gen/: Makefile  id_gen.sh  namespaces.sh
schema/: singine-collibra-io-api.json
scripts/: generate_agent_docs.py  generate_collibra_io_openapi.py
singine-collibra/: README.md
singine_collibra/: __init__.py  command.py  idgen.py  paths.py  server.py
uniWork/: CollibraBaseUrl  JSESSIONID  X-CSRF-TOKEN  baseCommunityId  glossaryDomainTypeId  lutino-collibra-metamodel.json  lutino-collibra-metamodel.mmd
uniWork/persistence/rust/: Cargo.toml
uniWork/persistence/rust/src/: id_gen.rs  main.rs  shortest_path.rs
(+184 files in other folders)
